--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,14 +14,13 @@ body {
   position: relative;
 }
 body::-webkit-scrollbar {
-  width: 0.5em;
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  background-color: #171717;
+  display: none;
 }
 body::-webkit-scrollbar-thumb {
   background-color: #6e6b6b;
   outline: 1px solid slategrey;
 }
+
 #main-box {
   display: flex;
   width: 100%;
@@ -430,6 +429,51 @@ label {
   border-radius: 20px;
 }
 /*------------------------------DASHBOARD CSS START----------------------------------------------------------------------------------*/
+
+.dashboardNavSection{
+  display: flex;
+  padding: 0.5vw 0.5vw;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin: 0.5vw 0vw;
+  /* border: 2px solid red; */
+}
+.SECTION-1{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 10%;
+  height: 5vh;
+  gap: 20px;
+  padding: 0.5vw 0.5vw;
+  font-size: 1.5vw;
+}
+.SECTION-1>#left,#right{
+  
+  padding: 0.5vw 0.5vw;
+  background-color: #444;
+  color: white;
+  border-radius: 50%;
+}
+.SECTION-2{
+  width: 10%;
+  height: 5vh;
+}
+.SECTION-2_IMG{
+  width: 40%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: red;
+}
+.SECTION-2_IMG img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  border-radius: 50%;
+}
+
 .dashBoardContainer {
   position: relative;
   display: flex;
@@ -437,6 +481,7 @@ label {
   width: 100%;
   min-height: 100vh;
   background-color: #121212;
+  gap: 10px;
 }
 .dashboardSection1 {
   position: sticky;
@@ -449,10 +494,30 @@ label {
 .dashboardSection2 {
   position: relative;
   width: 70%;
-  min-height: 100vh;
+  height: 100vh;
   border: 3px solid blue;
   overflow-y: auto;
+  padding: 0vw 1.5vw;
+  background-color: #121212;
 }
+.dashboardSection2::-webkit-scrollbar{
+  width: 0.5em;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #171717;
+}
+.dashboardSection2::-webkit-scrollbar-thumb{
+  background-color: #6e6b6b;
+  outline: 1px solid slategrey;
+}
+/*
+   {
+ 
+  } 
+  body::-webkit-scrollbar-thumb {
+  background-color: #6e6b6b;
+  outline: 1px solid slategrey;
+}
+*/
 /*NAVIGATION CSS*/
 .dashboardNavContainer {
   position: relative;
@@ -495,11 +560,89 @@ label {
   min-height: 40vh;
   /* border: 5px solid pink; */
 }
+/*-----------------------------------------------------------------------------------------*/
 .dashBoardSectionsponseredSection {
+  display: flex;
   width: 100%;
-  min-height: 40vh;
-  border: 5px solid #fff;
+  height: 40vh;
+  /* border: 5px solid #fff; */
+  background-color: #000000;
+  background-image: linear-gradient(160deg, #000000 0%, #444444 100%);
+  margin: 1.5vw 0vw;
 }
+.dashBoardSectionsponseredSection_photoSection{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 25%;
+  height: 100%;
+}
+.dashBoardSectionsponseredSection_poster{
+  width: 90%;
+  height: 90%;
+}
+.dashBoardSectionsponseredSection_poster img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+.dashBoardSectionsponseredSection_musicSection{
+  padding: 0.5vw 0.5vw;
+  width: 75%;
+  height: 100%;
+}
+.dashBoardSectionsponseredSection_heading{
+  width: 100%;
+  padding: 0.5vw 0.5vw;
+  /* background-color: red; */
+  font-size: 1.5rem;
+  color: #fff;
+}
+.dashBoardSectionsponseredSection_musicName{
+  width: 100%;
+  padding: 1.0vw 0.5vw;
+  font-size: 2.5rem;
+  color: #fff;
+  margin-top: 0.5vw;
+}
+.dashBoardSectionsponseredSection_musicDetail{
+  display: flex;
+  gap: 0.5rem;
+  width: 100%;
+  padding: 0.5vw 0.5vw;
+  color: #fff;
+}
+.dashBoardSectionsponseredSection_musicDetail>h3>a{
+  text-decoration: none;
+  color: white;
+}
+.dashBoardSectionsponseredSection_musicDetail>h3{
+  color: #9f9595;
+}
+.dashBoardSectionsponseredSection_buttons{
+  width: 100%;
+  padding: 0.5vw 0.5vw;
+}
+.dashBoardSectionsponseredSection_buttons>#button{
+    padding: 0.8vw 3.5vw;
+    background-color: #1ccc5b;
+    color: #fff;
+    border: none;
+    outline: none;
+    border-radius: 1rem;
+}
+.dashBoardSectionsponseredSection_buttons>#button>a{
+  text-decoration: none;
+  color: #fff;
+
+}
+.dashBoardSectionsponseredSection_buttons>#follow{
+   padding: 0.5vw 2.5rem;
+   border: 2px solid white;
+   background-color: transparent;
+}
+/*-----------------------------------------------------------------------------------------*/
 .viewAllSection {
   display: flex;
   justify-content: space-between;
@@ -522,30 +665,29 @@ label {
   display: flex;
   gap: 10px;
   width: 100%;
-  padding: 0.5vw 1vw;
-  border: 3px solid gray;
+  padding: 0.5vw 0vw;
+  /* border: 3px solid gray; */
 }
 .dashBoardPoster {
   display: flex;
   /* flex-direction: column; */
   justify-content: space-around;
   align-items: center;
-  width: 25%;
+  width: 20%;
   min-height: 40vh;
   background-color: #171717;
-  border-radius: 15px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  padding: 0.5vw 0.5vw;
 }
 .dashBoardPoster > a {
-  width: 80%;
+  width: 95%;
   padding: 0.2vw 0.2vw;
   text-decoration: none;
 }
 .posterPhoto {
   width: 100%;
-  height: 30vh;
+  height: 25vh;
   background-color: #6b6969;
-  border-radius: 15px;
   margin-bottom: 0.5vw;
   margin-top: 0.5vw;
 }
@@ -554,7 +696,6 @@ label {
   height: 100%;
   object-fit: cover;
   object-position: center;
-  border-radius: 15px;
 }
 .songArtistTitle {
   width: 85%;
@@ -564,13 +705,14 @@ label {
   padding: 0.5vw 0.5vw;
   margin-bottom: 0.5vw;
   color: white;
-  font-size: 1.5vw;
+  font-size: 1.0rem;
 }
 .songArtistTitle > h4 {
   width: 100%;
   padding: 0.5vw 0.5vw;
   margin-bottom: 0.5vw;
-  color: #d0c9c9;
+  color: #878282;
+  font-size: 0.8rem;
 }
 
 .dashBoardMusicPlayer_Section {
@@ -725,11 +867,79 @@ label {
   background-color: #444;
   color: white;
 }
+.dashboardUserPlaylist{
+  display: flex;
+  flex-direction: column;
+
+  gap: 10px;
+  width: 100%;
+  height: 80vh;
+  border: 2px solid pink;
+  overflow: hidden;
+  overflow-y: auto;
+  padding:  0 0.5vw;
+}
+.dashboardUserPlaylist_Header{
+  width: 100%;
+  height: 10vh;
+  /* background-color: #6b6969; */
+  padding: 0.5vw 0.5vw;
+}
+.dashboardUserPlaylist_Header_section-1{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 8vh;
+  padding: 0.5vw 0.5vw;
+}
+.dashboardUserPlaylist_heading{
+  width: 50%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.6vw;
+  color: #7f7a7a;
+  gap: 10px;
+}
+.ri-add-line{
+  font-size: 1.7vw;
+  color: #7f7a7a;
+}
+.dashboardUserPlaylist_songs{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 1.1vw;
+  width: 100%;
+  height: 5vh;
+  /* background-color: #444; */
+  margin-bottom: 0.5vw;
+  margin-top: 0.5vw;
+  padding: 0 0.5vw;
+  color:#9f9292;
+}
+.dashboardUserPlaylist_songs h4>a{
+  text-decoration: none;
+  color:#9f9292;
+  font-size: 1.2vw;
+}
+.dashboardUserPlaylist_songs:hover{
+  background-color: #444;
+  color: #d4caca;
+}
+.dashboardUserPlaylist_songs h4>a>#dot{
+  font-size: 1.5vw;
+  border-radius: 50%;
+}
+
 /*------------------------------SONGS FOR ---------------------------------------------------------------------------------*/
 .dashBoardAlbumSection {
   width: 100%;
-  padding: 0.5vw 0.5vw;
-  border: 3px solid #fff;
+  padding: 0.5vw 0vw;
+  min-height: 40vh;
+  /* border: 3px solid #fff; */
 }
 .dashboardAlbumHeading {
   display: flex;
@@ -749,35 +959,54 @@ label {
   font-weight: bold;
 }
 .dashBoardAlbumSection > .albumPoster {
-  width: 25%;
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  width: 20%;
   height: 40vh;
-  border: 3px solid pink;
+  background-color: #171717;
   margin: 0.5vw 0.5vw;
+  padding: 0.5vw 0.5vw;
 }
 .dashBoardAlbumSection > .albumPoster > .albumImage {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 100%;
-  border: 2px solid red;
+  width: 90%;
+  height: 70%;
+  margin-top: 1.0vw;
+  /* border-radius: 0px; */
 }
 .dashBoardAlbumSection > .albumPoster > .albumImage > a {
   width: 100%;
   height: 100%;
   background-color: #1ccc5b;
+  /* border-radius: 20px; */
 }
 .dashBoardAlbumSection > .albumPoster > .albumImage > a > img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   object-position: center;
+  /* border-radius: 20px; */
+}
+.dashBoardAlbumSection > .albumPoster > .albumImage > a{
+  text-decoration: none;
+}
+.dashBoardAlbumSection > .albumPoster > .albumImage > a >h4{
+  color: white;
+  font-size: 1.0rem;
+  margin-top: 1vw;
+}
+.dashBoardAlbumSection > .albumPoster > .albumImage > a>#subheading{
+  font-size: 0.8rem;
+  color: #787676;
 }
 
 /*-*------------------------------------------------------------------------------------*/
 .dashboardOtherSection {
   width: 100%;
-  min-height: 30vh;
+  height: 20vh;
   border: 3px solid #fff;
 }
 /*-------------------------------------ALBUM UPLOAD CSS-----------------------------------------------------*/
@@ -896,6 +1125,17 @@ label {
   border: none;
   outline: none;
 }
+#selectCategory{
+  width: 95%;
+  padding: 1vw 0.5vw;
+  background-color: #444;
+  color: white;
+  font-size: 1.2vw;
+  margin-top: 0.5vw;
+  border-radius: 10px;
+  border: none;
+  outline: none;
+}
 /*
 
  width:95%;
@@ -979,6 +1219,24 @@ label {
   border-radius: 10px;
   color: #fff;
   cursor: pointer;
+}
+#uploadButton{
+  width: 100%;
+  padding: 0.5vw 0.5vw;
+  /* background-color: red; */
+}
+#uploadButton button{
+  padding: 0.5vw 1vw;
+  font-weight: 700;
+  border-radius: 100px;
+  border: none;
+  outline: none;
+  background-color: #1ccc5b;
+ 
+}
+#uploadButton button a{
+  text-decoration: none;
+  color: #fff;
 }
 /*
 input[type="file"] {
@@ -1203,7 +1461,7 @@ input[type="file"]::file-selector-button :hover {
 .AlbumDetail_PosterDetail {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: end;
   align-items: center;
   width: 75%;
   height: 100%;
@@ -1213,7 +1471,7 @@ input[type="file"]::file-selector-button :hover {
   width: 100%;
   height: 50%;
   color: #fff;
-  font-size: 2.5vw;
+  font-size: 2.2vw;
 }
 .AlbumDetail_playlistAuthenication {
   width: 100%;
@@ -1301,3 +1559,36 @@ th {
 .music_title > h4 {
   font-size: 1.2vw;
 }
+.AlbumDetail_AllIcons{
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 10px;
+  width: 100%;
+  padding: 0.5vw 0.5vw;
+  font-size: 1.8vw;
+}
+#heart{
+  text-decoration: none;
+  color: #1ccc5b;
+  padding: 0vw 0.5vw;
+  /* background-color:white; */
+}
+#follow{
+  padding: 0.5vw 1.5vw;
+  border: 2px solid white;
+  border-radius: 10px;
+  background-color: transparent;
+ 
+}
+#follow>a{
+  text-decoration: none;
+  color: white;
+}
+#playlist{
+  padding: 0vw 0.5vw;
+  color:white;
+  text-decoration:none;
+}
+
+/*------------------------------------------------LIBRARY CSS---------------------------------------------------------*/
