--- a/views/albumUpload.ejs
+++ b/views/albumUpload.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Album Upload</title>
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
+    <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../stylesheets/style.css">
 </head>
 <body>
@@ -23,8 +24,15 @@
                     <div class="albumUpload_form_Container">        
                         <h4>Enter your Album Name</h4>
                        <input type="text" placeholder="Enter the name Of album" name="albumName" id="albumName">
-                         <h4>Enter your Album Poster</h4>
+                         <h4>Upload your Album Poster</h4>
                        <input type="file" placeholder="Upload the Album poster" name="albumPoster" id="albumPoster">
+                        <!-- <h4>Select the Category</h4> -->
+                        <select name="albumCategory" id="selectCategory">
+                            <option selected>Select the Category</option>
+                            <option value="PodCast">PodCast</option>
+                            <option value="HollyWood">HollyWood</option>
+                            <option value="Bollywood">Bollywood</option>
+                        </select><br>
                        <button class="upload_button" title="click" >Upload file</button>
                     </div>
                 </form>   
