--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -12,6 +12,7 @@
               <h6>Profile</h6>
               <h1><%=user.username%></h1>
               <h4><%=user.album.length%> &nbsp; Public PlayList . 20 following</h4>
+               <div id="uploadButton"><button><a href="/albumUpload">Upload Album</a></button></div>
             </div>
           </div>
           <div class="Uploaded_Album_Section"> 
